--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite-react": "^0.6.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "mongodb": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
