--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "mongodb": "^6.3.0",
+    "pdfjs-dist": "^5.4.54",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-pdf": "^10.0.1",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.8.9",
     "sort-by": "^0.0.2",
