--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "epubjs": "^0.3.93",
     "firebase": "^10.7.1",
     "flowbite-react": "^0.6.1",
     "localforage": "^1.10.0",
