--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "epubjs": "^0.3.93",
     "firebase": "^10.7.1",
-    "flowbite-react": "^0.6.1",
+    "flowbite-react": "^0.6.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "mongodb": "^6.3.0",
