--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "firebase": "^10.7.1",
     "flowbite-react": "^0.6.4",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.541.0",
     "match-sorter": "^6.3.1",
     "mongodb": "^6.3.0",
-    "pdfjs-dist": "^5.4.54",
+    "pdfjs-dist": "^5.3.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-pdf": "^10.0.1",
+    "react-pdf": "^10.1.0",
     "react-router-dom": "^6.16.0",
     "react-scroll": "^1.8.9",
     "sort-by": "^0.0.2",
